--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.proiectulpaginiweb.awj</groupId>
-    <artifactId>spring-api</artifactId>
+    <groupId>com.proiectulpaginiweb.studentbook.api</groupId>
+    <artifactId>studentbook-api</artifactId>
     <version>0.0.1</version>
 
     <parent>
@@ -34,11 +34,51 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <scm>
+      <developerConnection>scm:git:https://github.com/proiectulpaginiweb/spring-api</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>com.google.code.maven-replacer-plugin</groupId>
+              <artifactId>replacer</artifactId>
+              <version>1.5.1</version>
+              <executions>
+                <execution>
+                  <phase>prepare-package</phase>
+                  <goals>
+                    <goal>replace</goal>
+                  </goals>
+                </execution>
+              </executions>
+              <configuration>
+                <includes>
+                  <include>src/main/webapp/index.html</include>
+                </includes>
+                <replacements>
+                  <replacement>
+                    <token>%PROJECT_VERSION%</token>
+                    <value>${project.version}</value>
+                  </replacement>
+                  <replacement>
+                    <token>%ARTIFACT_ID%</token>
+                    <value>${project.artifactId}</value>
+                  </replacement>
+                </replacements>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.5.3</version>
+              <configuration>
+                <tagBase>https://github.com/proiectulpaginiweb/spring-api/releases</tagBase>
+              </configuration>
             </plugin>
         </plugins>
     </build>
