--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,17 @@
     <scm>
       <developerConnection>scm:git:git@github.com:proiectulpaginiweb/studentbook-api.git</developerConnection>
       <tag>HEAD</tag>
-  </scm>
+    </scm>
+
+    <distributionManagement>
+      <repository>
+        <uniqueVersion>false</uniqueVersion>
+        <id>studentbook-api</id>
+        <name>Studentbook API</name>
+        <url>git@github.com:proiectulpaginiweb/studentbook-api.git</url>
+        <layout>default</layout>
+      </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
