--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: java
 sudo: false
-script: mvn clean install
+jdk:
+  - oraclejdk8
+script:
+  - jdk_switcher use oraclejdk8
+  - mvn clean install
