--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.proiectulpaginiweb.studentbook.api</groupId>
     <artifactId>studentbook-api</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -35,7 +35,7 @@
 
     <scm>
       <developerConnection>scm:git:git@github.com:proiectulpaginiweb/studentbook-api.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>studentbook-api-0.0.4</tag>
     </scm>
 
     <build>
