--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.proiectulpaginiweb.studentbook.api</groupId>
   <artifactId>studentbook-api</artifactId>
-  <version>0.0.7</version>
+  <version>0.0.8-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -35,7 +35,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:proiectulpaginiweb/studentbook-api.git</developerConnection>
-    <tag>studentbook-api-0.0.7</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
