--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
         <configuration>
-          <tagBase>https://github.com/proiectulpaginiweb/spring-api/releases</tagBase>
+          <goals>deploy</goals>
+          <autoversionsubmodules>true</autoversionsubmodules>
         </configuration>
       </plugin>
     </plugins>
