--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <groupId>com.proiectulpaginiweb.studentbook.api</groupId>
   <artifactId>studentbook-api</artifactId>
   <version>0.0.10-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -56,9 +57,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
-        <configuration>
-          <autoversionsubmodules>true</autoversionsubmodules>
-        </configuration>
       </plugin>
     </plugins>
   </build>
