--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.proiectulpaginiweb.studentbook.api</groupId>
   <artifactId>studentbook-api</artifactId>
-  <version>0.0.10</version>
+  <version>0.0.11-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <parent>
@@ -36,7 +36,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:proiectulpaginiweb/studentbook-api.git</developerConnection>
-    <tag>studentbook-api-0.0.10</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
